--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -28,7 +28,7 @@
     "lodash.unset": "^4.5.2",
     "lodash.update": "^4.10.2",
     "mixpanel-browser": "^2.41.0",
-    "near-api-js": "^0.43.1",
+    "near-api-js": "near/near-api-js#feat-disable-2fa-with-fak",
     "near-ledger-js": "^0.1.2",
     "near-seed-phrase": "^0.2.0",
     "prop-types": "^15.7.2",
@@ -55,7 +55,7 @@
   },
   "scripts": {
     "predeploy": "yarn build",
-    "update:static": "cp src/wasm/multisig.wasm dist/multisig.wasm && cp src/wasm/main.wasm dist/main.wasm",
+    "update:static": "cp src/wasm/multisig.wasm dist/multisig.wasm && cp src/wasm/main.wasm dist/main.wasm && cp src/wasm/state_cleanup.wasm dist/state_cleanup.wasm",
     "start": "yarn update:static; parcel src/index.html --https --cert devServerCertificates/primary.crt --key devServerCertificates/private.pem",
     "prebuild": "rm -rf dist/",
     "build": "yarn run bundle && yarn run sentry",
